--- a/Business Data Science Project Airbnb new test.ipynb
+++ b/Business Data Science Project Airbnb new test.ipynb
@@ -5835,9 +5835,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GB ROC AUC: 0.7585726506685113\n"
+          ]
+        }
+      ],
       "source": [
         "#Model\n",
         "gb = GradientBoostingClassifier()\n",
@@ -5851,30 +5859,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "prices = np.linspace(50, 300, 50)\n",
-        "\n",
-        "X_sim = X_test.iloc[[0]].copy()\n",
-        "probas = []\n",
-        "\n",
-        "for p in prices:\n",
-        "    X_sim[\"price_clean\"] = p\n",
-        "    probas.append(logit.predict_proba(X_sim)[0, 1])\n",
-        "\n",
-        "expected_revenue = prices * np.array(probas)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ROC AUC: 0.7546608354700052\n",
+            "Log loss: 0.9076664952080544\n",
+            "PR AUC (avg precision): 0.8694914447601775\n",
+            "Brier score (calibration): 0.26742307804377413\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.ensemble import HistGradientBoostingClassifier\n",
         "from sklearn.metrics import roc_auc_score, log_loss, average_precision_score, brier_score_loss\n",
         "\n",
-        "# --- Model ---\n",
+        "# Model \n",
         "hgb = HistGradientBoostingClassifier(\n",
         "    loss=\"log_loss\",\n",
         "    learning_rate=0.08,\n",
@@ -5891,7 +5892,7 @@
         "\n",
         "hgb.fit(X_train, y_train)\n",
         "\n",
-        "# --- Evaluation ---\n",
+        "# Evaluation\n",
         "proba = hgb.predict_proba(X_test)[:, 1]\n",
         "\n",
         "print(\"ROC AUC:\", roc_auc_score(y_test, proba))\n",
@@ -5909,9 +5910,168 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>feature</th>\n",
+              "      <th>importance_mean</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>availability_30</td>\n",
+              "      <td>0.205717</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>estimated_revenue_l365d</td>\n",
+              "      <td>0.020404</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>reviews_per_month</td>\n",
+              "      <td>0.007595</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>price</td>\n",
+              "      <td>0.007133</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>calculated_host_listings_count</td>\n",
+              "      <td>0.004948</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>host_acceptance_rate</td>\n",
+              "      <td>0.004009</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>minimum_nights</td>\n",
+              "      <td>0.003940</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>last_review_year</td>\n",
+              "      <td>0.003710</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>maximum_nights</td>\n",
+              "      <td>0.002948</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>host_since_year</td>\n",
+              "      <td>0.002587</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>review_scores_rating</td>\n",
+              "      <td>0.002231</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>first_review_year</td>\n",
+              "      <td>0.002142</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>number_of_reviews_l30d</td>\n",
+              "      <td>0.002058</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>review_scores_location</td>\n",
+              "      <td>0.001896</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31</th>\n",
+              "      <td>neighbourhood_group_cleansed_Bordeaux</td>\n",
+              "      <td>0.001739</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>bedrooms</td>\n",
+              "      <td>0.001695</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>54</th>\n",
+              "      <td>room_type_Private room</td>\n",
+              "      <td>0.001141</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>host_response_rate</td>\n",
+              "      <td>0.001056</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>number_of_reviews_ly</td>\n",
+              "      <td>0.001045</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>host_has_profile_pic</td>\n",
+              "      <td>0.000556</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                  feature  importance_mean\n",
+              "11                        availability_30         0.205717\n",
+              "14                estimated_revenue_l365d         0.020404\n",
+              "19                      reviews_per_month         0.007595\n",
+              "8                                   price         0.007133\n",
+              "18         calculated_host_listings_count         0.004948\n",
+              "2                    host_acceptance_rate         0.004009\n",
+              "9                          minimum_nights         0.003940\n",
+              "21                       last_review_year         0.003710\n",
+              "10                         maximum_nights         0.002948\n",
+              "25                        host_since_year         0.002587\n",
+              "15                   review_scores_rating         0.002231\n",
+              "20                      first_review_year         0.002142\n",
+              "12                 number_of_reviews_l30d         0.002058\n",
+              "16                 review_scores_location         0.001896\n",
+              "31  neighbourhood_group_cleansed_Bordeaux         0.001739\n",
+              "6                                bedrooms         0.001695\n",
+              "54                 room_type_Private room         0.001141\n",
+              "1                      host_response_rate         0.001056\n",
+              "13                   number_of_reviews_ly         0.001045\n",
+              "4                    host_has_profile_pic         0.000556"
+            ]
+          },
+          "execution_count": 84,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from sklearn.inspection import permutation_importance\n",
         "\n",
