--- a/Business Data Science Project Airbnb.ipynb
+++ b/Business Data Science Project Airbnb.ipynb
@@ -5365,7 +5365,11 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Our goal is to train on past data in order to predict futur prices. Thus we need to separate our train and test sets according to a certain date. \n",
+        "\n",
+        "Since our dataset spans from 2025 to 2026, we decide to separate on the year."
+      ]
     },
     {
       "cell_type": "code",
@@ -5402,6 +5406,20 @@
         "\n",
         "yp_train_log = np.log1p(yp_train)\n",
         "yp_test_log  = np.log1p(yp_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We train our data on around 1.4 million observations, which seems enough in terms of output credibility."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We create a pipeline to train on our large set."
       ]
     },
     {
@@ -6400,7 +6418,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Second model: Histogram Gradient Boosting Regressor (stronger)"
+        "Baseline MAE (€): 35.40\n",
+        "→ On average, predictions are off by about €35.\n",
+        "\n",
+        "Baseline RMSE (€): 6343.43\n",
+        "→ Very large errors occur for some observations (RMSE is highly sensitive to extreme prices).\n",
+        "\n",
+        "Baseline R²: -1122.965\n",
+        "→ This is bad: it means the model performs much worse than predicting the average price on the test set.\n",
+        "\n",
+        "This means that here, the model uderfits and is not robust. It is likely that its because the pattern is nonlinear."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Better model: Histogram Gradient Boosting Regressor (stronger)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Therefore we build a probably much better model."
       ]
     },
     {
