More comments + walid delay

--- a/Business Data Science Project Airbnb.ipynb
+++ b/Business Data Science Project Airbnb.ipynb
@@ -6418,6 +6418,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Let's look at our coefficients:\n",
+        "\n",
         "Baseline MAE (€): 35.40\n",
         "→ On average, predictions are off by about €35.\n",
         "\n",
@@ -6441,12 +6443,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Therefore we build a probably much better model."
+        "Therefore let's build a much more adapted model to this situation.\n",
+        "\n",
+        "Since we are doing supervised learning, and dealing with probaby non-linear relationships, we build a tree boosting model. We prefer a Histogram-based Gradient Boosting Regression Tree since we are working with a very large dataset.\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -7482,16 +7487,16 @@
       ],
       "source": [
         "hgb_price = HistGradientBoostingRegressor(\n",
-        "    loss=\"squared_error\",\n",
+        "    loss=\"squared_error\", #minimizes mean squared error\n",
         "    learning_rate=0.06,\n",
         "    max_depth=8,\n",
         "    max_leaf_nodes=63,\n",
-        "    min_samples_leaf=50,\n",
-        "    l2_regularization=0.1,\n",
+        "    min_samples_leaf=50, #to prevent overfitting\n",
+        "    l2_regularization=0.1, #stabilize prediction (important, we saw that without we had mid results)\n",
         "    max_bins=255,\n",
-        "    early_stopping=True,\n",
+        "    early_stopping=True, #gain time if good precision\n",
         "    validation_fraction=0.05,\n",
-        "    n_iter_no_change=10,\n",
+        "    n_iter_no_change=10,  #same, gain time if no progress\n",
         "    random_state=42\n",
         ")\n",
         "\n",
@@ -7528,6 +7533,34 @@
         "print(f\"RMSE (€): {rmse:.2f}\")\n",
         "print(f\"MAE  (€): {mae:.2f}\")\n",
         "print(f\"R²       : {r2:.3f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's comment our new coefficient. \n",
+        "\n",
+        "With our gradient boosting tree, we have:\n",
+        "RMSE (€): 107.36\n",
+        "→ Typical error is around €107 \n",
+        "\n",
+        "MAE (€): 13.69\n",
+        "→ Average absolute error is only around €14, which isn't bad for our nightly price prediction.\n",
+        "\n",
+        "R²: 0.678\n",
+        "→ The model explains about 68% of variance in booked prices.\n",
+        "\n",
+        "Overall, these are much better over our Ridge predictor, and a credible model to predict booked airbnbs' prices."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, let's extract some interesting insights from our model. Using this model, we can learn which features contrbute to predictive performance. In simpler words this means that we can learn which parameters play a big role in setting a realistic booking price.\n",
+        "\n",
+        "To do so we use permutation importance (on a smaller sample than the overall dataset)."
       ]
     },
     {
@@ -7708,8 +7741,63 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Second prediction: predict availability\n",
-        "### Baseline model: logistic regression"
+        "Here, we can see that the top drivers for price are:\n",
+        "\n",
+        "estimated_revenue_l365d (~29.6%)\n",
+        "→ Strongest signal. Nights associated with listings that historically generate high revenue tend to have higher booked prices.\n",
+        "\n",
+        "beds (~18.1%) and bedrooms (~16.3%)\n",
+        "→ Capacity/size is a major determinant of booked price.\n",
+        "\n",
+        "room_type_Private room (~8.3%)\n",
+        "→ Room type shifts the price level meaningfully.\n",
+        "\n",
+        "minimum_nights (~6.0%)\n",
+        "→ Booking constraints are linked to pricing strategy (longer minimum stays often correlate with different price positioning).\n",
+        "\n",
+        "Review activity features (reviews_per_month, number_of_reviews_ly, number_of_reviews_l30d)\n",
+        "→ Demand/reputation signals matter for the booked price level.\n",
+        "\n",
+        "Neighbourhood (neighbourhood_group_cleansed_Bordeaux)\n",
+        "→ Location contributes, as expected.\n",
+        "\n",
+        "(Side note: here, we are using predictive features, not necessarily causal.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Overall, this model shows us that the booked price is largely influenced by “what the features are (capacity, room type, location) and “how strong its market is” (revenue/reviews). \n",
+        "\n",
+        "This model is therefore useful as a benchmark for typical booked price levels."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Second prediction: predict availability"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, we want to tackle another modelling question: wether an airbnb will be booked, depensing on its features.\n",
+        "\n",
+        "This is a supervised learning classification problem: for each listing-date, we predict whether the Airbnb is booked (unavailable) or not booked (available). \n",
+        "\n",
+        "### Baseline model: logistic regression\n",
+        "\n",
+        "Firstly, let's build a simple baseline logistic regression that we can use as a fast and interpretable benchmark"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "First, let's split according to the date, for the same reasons as for the previous model."
       ]
     },
     {
@@ -7755,6 +7843,14 @@
         "print(\"Train booking rate:\", y_train.mean())\n",
         "print(\"Test booking rate :\", y_test.mean())\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, we have a training set of around 2,3 million rows, which seems enough for good precision.\n",
+        "We also can see that the test year has a higher booking rate than the train year, which suggests distribution shift across time (that could be due to seasonality, market conditions,etc...)"
       ]
     },
     {
