data files and readme + formatting on main

--- a/Business Data Science Project Airbnb.ipynb
+++ b/Business Data Science Project Airbnb.ipynb
@@ -16,7 +16,7 @@
         "id": "7C_F8ScQjfMK"
       },
       "source": [
-        "# Objective: Smarter pricing (predict how price affects bookings)\n",
+        "## Objective: Smarter pricing (predict how price affects bookings)\n",
         "\n",
         "\n",
         "*   Idea: If a night is too expensive, fewer people book; too cheap, you leave money on the table.\n",
@@ -44,6 +44,61 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Hyperparameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "LISTINGS_PATH = \"data/Airbnb-Listings-Data.csv.gz\"\n",
+        "CALENDAR_PATH = \"data/Airbnb-Calendar-Data.csv.gz\"\n",
+        "REVIEWS_PATH = \"data/Airbnb-Reviews.csv.gz\"\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Imports"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#imports and paths\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "import json\n",
+        "import re\n",
+        "\n",
+        "from statsmodels.stats.outliers_influence import variance_inflation_factor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression, Ridge\n",
+        "from sklearn.metrics import roc_auc_score, log_loss, average_precision_score, brier_score_loss, mean_absolute_error, mean_squared_error, r2_score\n",
+        "from sklearn.ensemble import HistGradientBoostingClassifier, HistGradientBoostingRegressor\n",
+        "from sklearn.inspection import permutation_importance\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.pipeline import Pipeline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Cleaning"
       ]
     },
@@ -56,22 +111,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "metadata": {
         "id": "iUOpEu4dpyo6"
       },
       "outputs": [],
       "source": [
-        "#imports and paths\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
         "pd.set_option(\"display.max_columns\", 100)\n",
-        "pd.set_option(\"display.width\", 120)\n",
-        "\n",
-        "LISTINGS_PATH = \"Data/Airbnb-Listings-Data.csv\"\n",
-        "CALENDAR_PATH = \"Data/Airbnb-Calendar-Data.csv\"\n",
-        "REVIEWS_PATH = \"Data/Airbnb-Reviews.csv\"\n"
+        "pd.set_option(\"display.width\", 120)"
       ]
     },
     {
@@ -1163,13 +1210,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Functions"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import json\n",
-        "import re"
+        "def bordeaux_bound(df, lat_col=\"latitude\", lon_col=\"longitude\"):\n",
+        "    mask = (df[lat_col].between(44.792, 44.890)) & (df[lon_col].between(-0.620, -0.520))\n",
+        "    return df[mask]\n",
+        "\n",
+        "def map_tf_to_bool(series):\n",
+        "    return series.map({'t': True, 'f': False, 'True': True, 'False': False}).astype('boolean')\n",
+        "\n",
+        "def clean_percentage(series):\n",
+        "    return series.str.replace('%', '', regex=False).astype(float)\n",
+        "\n",
+        "def count_items(x):\n",
+        "    if pd.isna(x) or x in ['[]', '']:\n",
+        "        return 0\n",
+        "    try:\n",
+        "        items = json.loads(x.replace(\"'\", '\"'))\n",
+        "        return len(items)\n",
+        "    except:\n",
+        "        return x.count(',') + 1\n",
+        "    \n",
+        "def parse_bathrooms(text):\n",
+        "    if pd.isna(text): return None\n",
+        "    t = str(text).lower()\n",
+        "    if 'half' in t: return 0.5\n",
+        "    m = re.search(r'(\\d+(\\.\\d+)?)', t)\n",
+        "    if m: return float(m.group(1))\n",
+        "    return None"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Execution"
       ]
     },
     {
@@ -1241,15 +1326,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Filter to Bordeaux city boundaries\n",
         "# Remove listings outside Bordeaux bounding box\n",
-        "def bordeaux_bound(df, lat_col=\"latitude\", lon_col=\"longitude\"):\n",
-        "    mask = (df[lat_col].between(44.792, 44.890)) & (df[lon_col].between(-0.620, -0.520))\n",
-        "    return df[mask]\n",
         "if {\"latitude\", \"longitude\"} <= set(listings.columns):\n",
         "    listings =bordeaux_bound(listings)"
       ]
@@ -1269,13 +1351,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# convert boolean columns\n",
-        "def map_tf_to_bool(series):\n",
-        "    return series.map({'t': True, 'f': False, 'True': True, 'False': False}).astype('boolean')\n",
         "\n",
         "bool_cols = [\n",
         "    \"host_is_superhost\", \"host_has_profile_pic\", \"host_identity_verified\",\n",
@@ -1285,8 +1365,6 @@
         "    if col in listings.columns:\n",
         "        listings[col] = map_tf_to_bool(listings[col])\n",
         "\n",
-        "def clean_percentage(series):\n",
-        "    return series.str.replace('%', '', regex=False).astype(float)\n",
         "for col in ['host_response_rate', 'host_acceptance_rate']:\n",
         "    if col in listings.columns:\n",
         "        listings[col] = clean_percentage(listings[col])"
@@ -1294,32 +1372,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# handle amenities and host_verifications (count items), parse bathroom column,s\n",
-        "def count_items(x):\n",
-        "    if pd.isna(x) or x in ['[]', '']:\n",
-        "        return 0\n",
-        "    try:\n",
-        "        items = json.loads(x.replace(\"'\", '\"'))\n",
-        "        return len(items)\n",
-        "    except:\n",
-        "        return x.count(',') + 1\n",
+        "\n",
         "\n",
         "for col in [\"amenities\", \"host_verifications\"]:\n",
         "    if col in listings.columns:\n",
         "        listings[col] = listings[col].fillna('[]')\n",
         "        listings[f\"{col}_count\"] =listings[col].apply(count_items)\n",
         "\n",
-        "def parse_bathrooms(text):\n",
-        "    if pd.isna(text): return None\n",
-        "    t = str(text).lower()\n",
-        "    if 'half' in t: return 0.5\n",
-        "    m = re.search(r'(\\d+(\\.\\d+)?)', t)\n",
-        "    if m: return float(m.group(1))\n",
-        "    return None\n",
         "\n",
         "if \"bathrooms_text\" in listings.columns:\n",
         "    listings[\"bathrooms_clean\"] = listings[\"bathrooms_text\"].apply(parse_bathrooms)\n",
@@ -4383,8 +4447,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Functions"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def target_features(df, target_col):\n",
+        "    X = df.drop(columns=[target_col])\n",
+        "    y = df[target_col]\n",
+        "    return X, y\n",
+        "\n",
+        "def to_drop_highly_correlated_features(X, threshold=0.9):\n",
+        "    corr_matrix = X.corr().abs()\n",
+        "    upper_triangle = corr_matrix.where(\n",
+        "        np.triu(np.ones(corr_matrix.shape), k=1).astype(bool)\n",
+        "    )\n",
+        "    to_drop = [col for col in upper_triangle.columns if any(upper_triangle[col] > 0.9)]\n",
+        "    return to_drop\n",
+        "\n",
+        "def create_sample(X, sample_size=200000):\n",
+        "    np.random.seed(42)\n",
+        "    sample_idx = np.random.choice(X.index, size=sample_size, replace=False)     # draw at random without replacement\n",
+        "    X_sample = X.loc[sample_idx]\n",
+        "    return X_sample"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Execution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4401,10 +4505,7 @@
         "# Separate features and target\n",
         "# Assuming price_clean is your target variable\n",
         "\n",
-        "def target_features(df, target_col):\n",
-        "    X = df.drop(columns=[target_col])\n",
-        "    y = df[target_col]\n",
-        "    return X, y\n",
+        "\n",
         "\n",
         "# For our first task of predicting price_clean\n",
         "df_booked = df_encoded[df_encoded['is_booked'] == 1].copy()\n",
@@ -4418,7 +4519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 195,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4442,13 +4543,7 @@
         "print(\"PRE-FILTERING ----------------------------------------------- \")\n",
         "\n",
         "# Remove obvious high correlations --> fatser than VIF\n",
-        "def to_drop_highly_correlated_features(X, threshold=0.9):\n",
-        "    corr_matrix = X.corr().abs()\n",
-        "    upper_triangle = corr_matrix.where(\n",
-        "        np.triu(np.ones(corr_matrix.shape), k=1).astype(bool)\n",
-        "    )\n",
-        "    to_drop = [col for col in upper_triangle.columns if any(upper_triangle[col] > 0.9)]\n",
-        "    return to_drop\n",
+        "\n",
         "\n",
         "print(f\"Dropping {len(to_drop_highly_correlated_features(X))} features with correlation > 0.9\")\n",
         "print(\"features to drop:\", to_drop_highly_correlated_features(X))\n",
@@ -4966,7 +5061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4982,11 +5077,7 @@
       "source": [
         "# Sample for VIF calculation, or else it will take forever. 2000000 rows should be enough.\n",
         "\n",
-        "def create_sample(X, sample_size=200000):\n",
-        "    np.random.seed(42)\n",
-        "    sample_idx = np.random.choice(X.index, size=sample_size, replace=False)     # draw at random without replacement\n",
-        "    X_sample = X.loc[sample_idx]\n",
-        "    return X_sample\n",
+        "\n",
         "\n",
         "sample_size = 200000\n",
         "X_sample = create_sample(X_filtered, sample_size)\n",
@@ -5089,17 +5180,37 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 201,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from statsmodels.stats.outliers_influence import variance_inflation_factor"
+        "#### Functions"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "def calculate_vif(dataframe):\n",
+        "    vif_data = pd.DataFrame()\n",
+        "    vif_data[\"Feature\"] = dataframe.columns\n",
+        "    vif_data[\"VIF\"] = [variance_inflation_factor(dataframe.values, i) \n",
+        "                       for i in range(len(dataframe.columns))]\n",
+        "    return vif_data.sort_values('VIF', ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Execution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -5138,12 +5249,6 @@
         "# Calculate VIF on filtered + sampled data for price prediction\n",
         "print(\"\\nCalculating VIF for price prediction features\")\n",
         "\n",
-        "def calculate_vif(dataframe):\n",
-        "    vif_data = pd.DataFrame()\n",
-        "    vif_data[\"Feature\"] = dataframe.columns\n",
-        "    vif_data[\"VIF\"] = [variance_inflation_factor(dataframe.values, i) \n",
-        "                       for i in range(len(dataframe.columns))]\n",
-        "    return vif_data.sort_values('VIF', ascending=False)\n",
         "\n",
         "initial_vif = calculate_vif(X_sample)\n",
         "print(\"\\n✓ Initial VIF calculated!\")\n",
@@ -5335,20 +5440,6 @@
       "metadata": {},
       "source": [
         "Let's start with our first model, the one that predicts wether a hotel is booked, depending on its features."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 206,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from sklearn.linear_model import LogisticRegression, Ridge\n",
-        "from sklearn.metrics import roc_auc_score, log_loss, average_precision_score, brier_score_loss, mean_absolute_error, mean_squared_error, r2_score\n",
-        "from sklearn.ensemble import HistGradientBoostingClassifier, HistGradientBoostingRegressor\n",
-        "from sklearn.inspection import permutation_importance\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.pipeline import Pipeline"
       ]
     },
     {
@@ -11040,27 +11131,6 @@
         "\n",
         "Our last case study will recommend a price-change depending on seasonality, for any airbnb randomely selected.\n",
         "To do so, we isolate the effect of timing by comparing the same listing across two different dates, to see how we should adjust the prices depending on this timing change. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Baseline row snapshot:\n",
-            "price_clean: 79.0\n",
-            "month/day: 5 3\n",
-            "availability_30: 0.0\n",
-            "estimated_revenue_l365d: 2538.0\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n"
       ]
     },
     {
